--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <title>Jogo da Memória - Sonho de uma noite de verão</title>
 </head>
 <body>
-    <section class="memory-game">
+  <section class="memory-game">
+      <header class="headerDescription">
+        <h1>
+        Abaixo, há um jogo da memória referente aos personagens da famosa comédia Sonho de uma noite de verão, de Shakespeare, e suas respectivas características. Para jogar, clique em duas cartas, de forma a virá-las. Se virar duas cartas que não se correspondem, ambas  voltarão ao jogo, que seguirá. Você deve repetir o movimento, clicando em duas cartas. Caso acerte um par, as cartas ficarão abertas e o jogo segue. Repita a jogada até descobrir todos os personagens e vencer o jogo.
+      </h1>
+      </header>
         <div class="memory-card" data-framework="hermia">
           <img class="front-face" src="img/1.png" alt="Face da Carta">
           <img class="back-face" src="img/26.png" alt="Verso da Carta">
